overflow scrolling fixed for swatches, autoscrolls to the end of scroll when adding swatch

--- a/src/views/swatches/styles.module.css
+++ b/src/views/swatches/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-end;
   flex-grow: 1;
   flex-shrink: 1;
   margin-right: 20px;
@@ -11,14 +12,37 @@
 .swatchContainer {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
-  flex-grow: 1;
   flex-shrink: 1;
   margin-right: 10px;
+  overflow: hidden;
   overflow-x: auto;
-  height: 46px;
+  height: 60px;
   white-space: nowrap;
+  scrollbar-width: 4px;
+  scrollbar-color: #fff;
+  -webkit-overflow-scrolling: touch;
+}
+
+.swatchContainer::-webkit-scrollbar {
+  background-color: #000;
+  height: 4px;
+}
+
+.swatchContainer:hover::-webkit-scrollbar {
+  opacity: 1;
+}
+
+.swatchContainer::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity 0.1s;
+}
+
+.swatchContainer:hover::-webkit-scrollbar-thumb {
+  opacity: 1;
 }
 
 .addBtn {
